--- a/examples/todos/index.html
+++ b/examples/todos/index.html
@@ -6,6 +6,8 @@
     <title>Redux Todos Example</title>
   </head>
   <body>
+
+    <div id="test">this is a template file</div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
